workspace = { members = ["engine_tester"] }
[package]
name = "polyhedra"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.8"
log = "0.4.27"
wgpu = "24.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]
